# asphyxia_b50

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  eamuse.rs  jacket.rs  lib.rs  main.rs  models.rs  music_db.rs  savedata.rs  settings.rs  volforce.rs
src/components/: B50Card.svelte  B50Preview.svelte  BackgroundPicker.svelte  CloudScoreSettings.svelte  CloudUploadSettings.svelte  EmptyState.svelte  ExportPanel.svelte  FolderPicker.svelte  PlayerList.svelte  Sidebar.svelte
src/lib/: api.ts  exportPng.ts  i18n.ts
src/styles/: b50.css  panels.css  sidebar.css
