[package]
name = "sdvx-b50-tool"
version = "1.0.0"
description = "Standalone SDVX 7 B50 image exporter"
authors = ["hlcm"]
edition = "2021"

[lib]
name = "sdvx_b50_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
encoding_rs = "0.8"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
