[package]
name = "sdvx-b50-tool"
version = "1.2.2"
description = "Standalone SDVX 7 B50 image exporter"
authors = ["hlcm"]
edition = "2021"

[lib]
name = "sdvx_b50_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
bytes = "1"
encoding_rs = "0.8"
kbinxml = { git = "https://github.com/mbilker/kbinxml-rs.git", rev = "706820b13aad2da90db4eedc8fb4eddd2fb0646e" }
md-5 = "0.10"
rand = "0.8"
roxmltree = "0.20"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
